add_subdirectory(exercise00.01)
add_subdirectory(exercise00.02)
add_subdirectory(exercise00.03)
add_subdirectory(exercise00.04)
# add_subdirectory(exercise00.05)
add_subdirectory(exercise00.06)
# add_subdirectory(exercise00.07)
add_subdirectory(exercise00.08)
add_subdirectory(exercise00.09)
add_subdirectory(exercise00.10)